
IO::

  New method::

    * Added IO#set_encoding_by_bom to check the BOM and set the external
      encoding.  [Bug #15210]

Integer::

  Modified method::

    * Integer#[] now supports range operation.  [Feature #8842]

         0b01001101[2, 4]  #=> 0b0011
         0b01001100[2..5]  #=> 0b0011
         0b01001100[2...6] #=> 0b0011
             ^^^^

Module::

  New method::

    * Added Module#const_source_location to retrieve the location where a
      constant is defined.  [Feature #10771]

  Modified method::

    * Module#autoload? now takes an +inherit+ optional argument, like as
      Module#const_defined?.  [Feature #15777]

    * Module#name now always return a frozen String. The returned String is
      always the same for a given Module. This change is
      experimental. [Feature #16150]

ObjectSpace::WeakMap::

  Modified method::

    * ObjectSpace::WeakMap#[]= now accepts special objects as either key or
      values.  [Feature #16035]

Regexp / String::

    * Update Unicode version and Emoji version from 11.0.0 to
      12.0.0.  [Feature #15321]

    * Update Unicode version to 12.1.0, adding support for
      U+32FF SQUARE ERA NAME REIWA.  [Feature #15195]

RubyVM::

  Removed method::

    * +RubyVM.resolve_feature_path+ moved to
      <code>$LOAD_PATH.resolve_feature_path</code>.  [Feature #15903] [Feature #15230]

Symbol::

  Modified method::

    * Symbol#to_s now always returns a frozen String. The returned String
      is always the same for a given Symbol.  This change is
      experimental.  [Feature #16150]

Time::

  New methods::

    * Added Time#ceil method.  [Feature #15772]

    * Added Time#floor method.  [Feature #15653]

  Modified method::

    * Time#inspect is separated from Time#to_s and it shows its sub
      second.  [Feature #15958]

UnboundMethod::

  New methods::

    * Added UnboundMethod#bind_call method.  [Feature #15955]

      <code>umethod.bind_call(obj, ...)</code> is semantically equivalent